--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Satoshi from Fontshare -->
 <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-    <title>Vite + React + TS</title>
+    <title>Second Brain</title>
   </head>
   <body>
     <div id="root"></div>
